--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\TUF GAMING F15\\Downloads\\jcalendar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.MySql_JDBC_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
